syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package pointpb;

service PointAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
    rpc GetTotalAmount(GetTotalAmountRequest) returns (GetTotalAmountResponse) {}
}

message Point {
	string UUID = 1;
	string userUUID = 2;
	int32 balance = 3;
	string description = 4;
	google.protobuf.Timestamp createdAt = 5;
	google.protobuf.Timestamp updatedAt = 6;
	google.protobuf.Timestamp deletedAt = 7;
}

message GetRequest {
    string UUID = 1;
}

message GetResponse {
    Point point = 1;
}

message SetRequest {
	Point point = 1;
}

message SetResponse {
	string UUID = 1;
}

message UpdateRequest {
	Point point = 1;
}

message DeleteRequest {
    string UUID = 1;
}

message GetTotalAmountRequest {
	string UserUUID = 1;
}

message GetTotalAmountResponse {
	string UserUUID = 1;
	int32 TotalAmount = 2;
}